# bazel_ios

./: .bazelignore  .bazelrc  MODULE.bazel
app/: BUILD.bazel
app/App.xcodeproj/: project.pbxproj
app/App.xcodeproj/rules_xcodeproj/: generated.xcfilelist
app/App.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh
app/App.xcodeproj/xcshareddata/xcschemes/: app.xcscheme
